--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         timer1 = setTimeout('goFn()', speed);
     
         if(text.length < cnt){
-            // 아래 주석으로 처리된 부분을 지우면 한번만 실행됩니다.
+            // 아래 주석으로 처리된 부분을 지우면 한번만 실행
             clearTimeout(timer1)
             cnt = 0;
         }
