--- a/main.html
+++ b/main.html
@@ -15,30 +15,7 @@
 
 <body>
   <div class="inner">
-    <div class="container">
-      <div class="camera_top">
-        <li><img src="images/flash.png" alt="카메라 플래시"></li>
-        <li><img src="images/shake.png" alt="카메라 흔들림"></li>
-        <li><img src="images/live_off.png" alt="카메라 라이브"></li>        
-      </div>
-      <div id="lens"><img src="images/top_camera.png" alt="렌즈"></div>
-      <div class="camera_bottom">
-        <ul id="bottom_top">
-          <li>분류별 랭킹</li>
-          <li>혜택별 카드</li>
-          <li>정부지원 카드</li>
-          <li>카드 찾기</li>
-        </ul>
-        <div id="preview">
-          <img src="images/preview.png" alt="카메라 미리보기">
-        </div>
-        <div id="bottom_camera">
-          <img src="images/bottom_camera.png" alt="하단 카메라">
-        </div>
-        <div id="bottom_reverse">
-          <img src="images/reverse3.png" alt="하단 리버스2">
-        </div>
-      </div>
+    <div class="container">      
       <div class="wrap">
         <div class="logo2">
           <a href="main.html">
@@ -168,85 +145,85 @@
                       <li>
                         <input onclick="CountChecked(this)" id="benefit01" type="checkbox" name="benefit_selector">
                         <label for="benefit01">          
-                          <span class="benefit_name"><em>📞 통신</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">📞 </span>통신</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit02" type="checkbox" name="benefit_selector">
                         <label for="benefit02">          
-                          <span class="benefit_name"><em>🛍️ 쇼핑</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🛍️ </span>쇼핑</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit03" type="checkbox" name="benefit_selector">
                         <label for="benefit03">          
-                          <span class="benefit_name"><em>🛒 마트·편의점</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🛒 </span>마트·편의점</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit04" type="checkbox" name="benefit_selector">
                         <label for="benefit04">          
-                          <span class="benefit_name"><em>🚌 교통</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🚌 </span>교통</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit05" type="checkbox" name="benefit_selector">
                         <label for="benefit05">          
-                          <span class="benefit_name"><em>🏍️ 배달앱·간편결제</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🏍️ </span>배달앱·간편결제</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit06" type="checkbox" name="benefit_selector">
                         <label for="benefit06">          
-                          <span class="benefit_name"><em>📺 구독·스트리밍</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">📺 </span>구독·스트리밍</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit07" type="checkbox" name="benefit_selector">
                         <label for="benefit07">          
-                          <span class="benefit_name"><em>🧳 여행·해외결제</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🧳 </span>여행·해외결제</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit08" type="checkbox" name="benefit_selector">
                         <label for="benefit08">          
-                          <span class="benefit_name"><em>✈️ 항공 마일리지·라운지</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">✈️ </span>항공 마일리지·라운지</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit09" type="checkbox" name="benefit_selector">
                         <label for="benefit09">          
-                          <span class="benefit_name"><em>⛽️ 주유·차량정비</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">⛽️ </span>주유·차량정비</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit10" type="checkbox" name="benefit_selector">
                         <label for="benefit10">          
-                          <span class="benefit_name"><em>🏪 무실적·모든 가맹점</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🏪 </span>무실적·모든 가맹점</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit11" type="checkbox" name="benefit_selector">
                         <label for="benefit11">          
-                          <span class="benefit_name"><em>🧾 공과금</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🧾 </span>공과금</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit12" type="checkbox" name="benefit_selector">
                         <label for="benefit12">          
-                          <span class="benefit_name"><em>🏥 병원·약국</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">🏥 </span>병원·약국</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit13" type="checkbox" name="benefit_selector">
                         <label for="benefit13">          
-                          <span class="benefit_name"><em>💸 증권사</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">💸 </span>증권사</em></span>
                         </label>
                       </li>
                       <li>
                         <input onclick="CountChecked(this)" id="benefit14" type="checkbox" name="benefit_selector">
                         <label for="benefit14">          
-                          <span class="benefit_name"><em>💳 제휴</em></span>
+                          <span class="benefit_name"><em><span id="s_icon">💳 </span>제휴</em></span>
                         </label>
                       </li>
                     </ul>
@@ -520,7 +497,7 @@
                   <div class="photo"><img src="img/check/check-09.png" alt=""></div>
                   <div class="box">
                     <h4>노리체크카드</h4>
-                    <p class="text">대중교통 10% 청구할인, 이동통신 요금 2,500원 환급할인, CGV 35% 환급할인</p>
+                    <p class="text">대중교통 10% 청구할인, 통신 2,500원 환급할인, CGV 35% 환급할인</p>
                     <div class="tag">
                       <span>#KB국민카드</span>
                       <span>#대중교통</span>
@@ -536,7 +513,6 @@
                     <div class="tag">
                       <span>#KB국민카드</span>
                       <span>#해외 수수료 면제</span>
-                      <span>#국내 할인</span>
                     </div><!-- tag -->
                   </div> <!-- box -->
                 </a></li>
@@ -885,10 +861,16 @@
           <div id="mouse"><img src="images/pointer_333.png" alt="마우스 포인터"></div>
           <div id="touch"><img src="images/touch_333.png" alt="터치 포인터"></div>
           <div><a href=".tutorial" id="tuto_close">닫기</a></div>
-        </div><!--end:.tutorial-->      
+        </div><!--end:.tutorial-->
       </div><!--end:.wrap-->   
     </div> 
   </div><!--end.inner-->
+  <div class="rotate_screen">
+    <div class="rotate_icon">
+      <img src="images/rotate_w.png" alt="핸드폰 회전">
+    </div>
+  </div><!--end:.rotate_screen-->
+  <div class="rotate_text">ROTATE YOUR PHONE</div>
 
   <script src="js/EzenAddClass.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
