--- a/main.html
+++ b/main.html
@@ -675,7 +675,7 @@
                 <li id="sub_link"><a href="#">바로가기</a></li>
               </ul>
             </div>
-            <div class="swiper-slide"><img src="cards/trip5.png" alt="">
+            <div class="swiper-slide"><img src="cards/trip5_1.png" alt="">
               <ul>
                 <li id="sub_title">DA 카드의 정석 Ⅱ</li>
                 <li id="sub_text1">국내 공항라운지 무료 이용</li>
@@ -717,7 +717,7 @@
                 <li id="sub_link"><a href="#">바로가기</a></li>
               </ul>
             </div>
-            <div class="swiper-slide"><img src="cards/movie3.png" alt="">
+            <div class="swiper-slide"><img src="cards/movie3_1.png" alt="">
               <ul>
                 <li id="sub_title">올바른 FLEX 카드</li>
                 <li id="sub_text1">영화 30% 할인</li>
@@ -783,7 +783,7 @@
                 <li id="sub_link"><a href="#">바로가기</a></li>
               </ul>
             </div>
-            <div class="swiper-slide"><img src="cards/delievery5.png" alt="">
+            <div class="swiper-slide"><img src="cards/delievery5_1.png" alt="">
               <ul>
                 <li id="sub_title">신한카드 국민행복</li>
                 <li id="sub_text1">배달앱 10% 할인</li>
@@ -833,7 +833,7 @@
                 <li id="sub_link"><a href="#">바로가기</a></li>
               </ul>
             </div>
-            <div class="swiper-slide"><img src="cards/car5.png" alt="">
+            <div class="swiper-slide"><img src="cards/car5_1.png" alt="">
               <ul>
                 <li id="sub_title">CLUB SK 카드</li>
                 <li id="sub_text1">SK주유소 최대 150원/L<br>청구할인</li>
