--- a/index.html
+++ b/index.html
@@ -46,8 +46,6 @@
     .intro_keywords p {display: inline-block; padding: .5% .6% .64%; transition: all .2s ease-in-out;
       background-color: #44444433; border-radius: 5px; border: 1px solid transparent;}
     .intro_keywords p:first-child {margin-right: .5%;}
-    .intro_keywords p:hover {border-color: #000;}
-    .intro_keywords p a {text-decoration: none; color: #000;}
     .enter {margin: 3% 0 0 -1%;}
     .enter a {text-decoration: none; font-family: 'GmarketSansMedium'; border-radius: 10px;
       font-weight: bold; font-size: 2.1875rem; color: #fff; padding: .7% 2.2% .4%; background-color: #0078ff;
@@ -85,8 +83,8 @@
       <span>당신의 소비 패턴에 맞는<br>최적의 카드를 추천해 드립니다.</span>
     </div><!--end:.mobile_text"-->
     <div class="intro_keywords">
-      <p><a href="https://mio-mia.github.io/project02-share/html/re.html" target="_blank">#맞춤형 카드추천</a></p>
-      <p><a href="https://mio-mia.github.io/project02-share/html/credit.html" target="_blank">#인기카드 TOP10</a></p>
+      <p>#맞춤형 카드추천</p>
+      <p>#인기카드 TOP10</p>
     </div><!--intrp_keywords-->
     <div class="enter clearfix"> 
         <a id="enter_button" href="main.html" target="_blank"><span id="enter_text">ENTER</span></a>
