--- a/main.html
+++ b/main.html
@@ -263,7 +263,8 @@
                   <div class="photo"><img src="img/credit/credit-01.png" alt="" title="더보기"></div>
                   <div class="box">
                     <h4>삼성카드 taptap O</h4>
-                    <div class="tag">
+                    <p class="text">스타벅스 50% 할인<br>대중교통 10% 할인<br>영화관 5,000원 할인</p>
+                    <div class="tag">                      
                       <span>#삼성카드</span>
                       <span>#사회초년생</span>
                     </div>
@@ -274,6 +275,7 @@
                   <div class="photo"><img src="img/credit/credit-02.png" alt=""></div>
                   <div class="box">
                     <h4>신한카드 Mr.Life</h4>
+                    <p class="text">공과금 10% 할인<br>마트, 편의점 10% 할인<br>식음료 10% 할인</p>
                     <div class="tag">
                       <span>#공과금</span>
                       <span>#마트·편의점</span>
@@ -285,6 +287,7 @@
                   <div class="photo"><img src="img/credit/credit-03.png" alt=""></div>
                   <div class="box">
                     <h4>삼성카드 & MILEAGE PLATINUM (스카이패스)</h4>
+                    <p class="text">1,000원당 1마일 기본적립<br>국내/해외 옵션 1마일 적립<br>인천공항 라운지 무료이용</p>
                     <div class="tag">
                       <span>#마일리지 적립</span>
                       <span>#라운지</span>
@@ -301,7 +304,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-04.png" alt=""></div>
                   <div class="box">
-                    <h4>현대카드 M</h4>
+                    <h4><span>4.</span> 현대카드 M</h4>
                     <p class="text">국내 외 가맹점 1.5%적립, 온라인 쇼핑몰 5% 적립, 해외 가맹점 5% 적립</p>
                     <div class="tag">
                       <span>#현대카드</span>
@@ -313,7 +316,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-05.png" alt=""></div>
                   <div class="box">
-                    <h4>KB국민 My WE:SH 카드</h4>
+                    <h4><span>5.</span> KB국민 My WE:SH 카드</h4>
                     <p class="text">공과금 10% 할인, 교통·통신·배달앱 10% 할인, 스트리밍 1,500원 할인</p>
                     <div class="tag">
                       <span>#KB국민카드</span>
@@ -325,7 +328,7 @@
                 <li class="lie-A"><a href="#">
                   <div class="photo"><img src="img/credit/credit-06.png" alt=""></div>
                   <div class="box">
-                    <h4>LOCA 365 카드</h4>
+                    <h4><span>6.</span> LOCA 365 카드</h4>
                     <p class="text">KB Pay 10% 할인, 음식점 10% 할인, 서비스팩 3개 중 1개 선택 할인</p>
                     <div class="tag">
                       <span>#롯데카드</span>
@@ -338,7 +341,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-07.png" alt=""></div>
                   <div class="box">
-                    <h4>카드의정석 EVERY MILE SKYPASS</h4>
+                    <h4><span>7.</span> 카드의정석 EVERY MILE SKYPASS</h4>
                     <p class="text">해외 이용 수수료 0.3% 면제, 국내 공항라운지 동반 1인 동시 이용</p>
                     <div class="tag">
                       <span>#우리카드</span>
@@ -350,7 +353,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-08.png" alt=""></div>
                   <div class="box">
-                    <h4>LOCA LIKIT 1.2</h4>
+                    <h4><span>8.</span> LOCA LIKIT 1.2</h4>
                     <p class="text">음식·생활·패션 5% 적립, 통신·구독·멤버십 최대 20% 적립</p>
                     <div class="tag">
                       <span>#모든가맹점</span>
@@ -361,7 +364,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-09.png" alt=""></div>
                   <div class="box">
-                    <h4>신한카드 처음(ANNIVERSE)</h4>
+                    <h4><span>9.</span> 신한카드 처음(ANNIVERSE)</h4>
                     <p class="text">모든 가맹점 1.2% 할인, 온라인 1.5% 할인</p>
                     <div class="tag">
                       <span>#신한카드</span>
@@ -372,7 +375,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-10.png" alt=""></div>
                   <div class="box">
-                    <h4>삼성 iD SIMPLE 카드</h4>
+                    <h4><span>10.</span> 삼성 iD SIMPLE 카드</h4>
                     <p class="text">4개 정유사 10% 할인, 차량 서비스 10% 할인, 편의점·커피·택시 5% 할인</p>
                     <div class="tag">
                       <span>#삼성카드</span>
@@ -397,10 +400,11 @@
                   <p>1</p>
                   <div class="photo"><img src="img/check/check-01.png" alt="" title="더보기"></div>
                   <div class="box">
-                    <h4>삼성카드 taptap O</h4>
+                    <h4>ONE 체크카드</h4>
+                    <p class="text">최대 1.2% 캐시백<br>자주 쓰는 곳에서 7% 캐시백<br>3번 할때마다 1,000원 캐시백</p>
                     <div class="tag">
-                      <span>#삼성카드</span>
-                      <span>#사회초년생</span>
+                      <span>#케이뱅크</span>
+                      <span>#캐시백</span>
                     </div>
                   </div>
                 </a></li>
@@ -408,10 +412,11 @@
                   <p>2</p>
                   <div class="photo"><img src="img/check/check-02.png" alt=""></div>
                   <div class="box">
-                    <h4>신한카드 Mr.Life</h4>
+                    <h4>노리2 체크카드(KB Pay)</h4>
+                    <p class="text">커피, 모바일, 문화 10% 할인<br>뷰티, 편의점 5% 할인<br>KB Pay 2% 추가 할인</p>
                     <div class="tag">
-                      <span>#공과금</span>
-                      <span>#마트·편의점</span>
+                      <span>#카페</span>
+                      <span>#뷰티</span>
                     </div>
                   </div>
                 </a></li>
@@ -419,10 +424,11 @@
                   <p>3</p>
                   <div class="photo"><img src="img/check/check-03.png" alt=""></div>
                   <div class="box">
-                    <h4>삼성카드 & MILEAGE PLATINUM (스카이패스)</h4>
+                    <h4>신한카드 Deep Dream 체크(미니언즈)</h4>
+                    <p class="text">모두드림 0.2% 적립<br>더해드림 0.6% 적립<br>챙겨드림 1.0% 적립</p>
                     <div class="tag">
-                      <span>#마일리지 적립</span>
-                      <span>#라운지</span>
+                      <span>#신한카드</span>
+                      <span>#적립</span>
                     </div>
                   </div>
                 </a></li>
@@ -436,7 +442,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/check/check-04.png" alt=""></div>
                   <div class="box">
-                    <h4>네이버페이 머니 하나 체크카드</h4>
+                    <h4><span>4.</span> 네이버페이 머니 하나 체크카드</h4>
                     <p class="text">네이버페이 1.2% 포인트 적립</p>
                     <div class="tag">
                       <span>#하나카드</span>
@@ -448,7 +454,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/check/check-05.png" alt=""></div>
                   <div class="box">
-                    <h4>카카오페이 신한 체크카드</h4>
+                    <h4><span>5.</span> 카카오페이 신한 체크카드</h4>
                     <p class="text">카카오페이 2% 적립, 대중교통 3% 적립, CGV 최대 3천원 적립</p>
                     <div class="tag">
                       <span>#신한카드</span>
@@ -460,7 +466,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/check/check-06.png" alt=""></div>
                   <div class="box">
-                    <h4>모빌리언스카드</h4>
+                    <h4><span>6.</span> 모빌리언스카드</h4>
                     <p class="text">온라인·오프라인 각각 1% 0.5% 적립, 편의점·커피·외식 최대 7.5% 적립</p>
                     <div class="tag">
                       <span>#KG모빌리언스</span>
@@ -472,7 +478,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/check/check-07.png" alt=""></div>
                   <div class="box">
-                    <h4>PAYCO 포인트 카드</h4>
+                    <h4><span>7.</span> PAYCO 포인트 카드</h4>
                     <p class="text">HDC 아이파크몰 100만P 상품권 지급, 매월 건당 최대 30% 무제한 할인</p>
                     <div class="tag">
                       <span>#엔에이치엔페이코</span>
@@ -484,7 +490,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/check/check-08.png" alt=""></div>
                   <div class="box">
-                    <h4>더나은 체크카드</h4>
+                    <h4><span>8.</span> 더나은 체크카드</h4>
                     <p class="text">간편결제 20% 할인, 온라인쇼핑 20% 할인, 커피전문점 20% 할인</p>
                     <div class="tag">
                       <span>#MG새마을금고</span>
@@ -496,7 +502,7 @@
                 <li class="lie-b"><a href="#">
                   <div class="photo"><img src="img/check/check-09.png" alt=""></div>
                   <div class="box">
-                    <h4>노리체크카드</h4>
+                    <h4><span>9.</span> 노리체크카드</h4>
                     <p class="text">대중교통 10% 청구할인, 통신 2,500원 환급할인, CGV 35% 환급할인</p>
                     <div class="tag">
                       <span>#KB국민카드</span>
@@ -508,7 +514,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/check/check-10.png" alt=""></div>
                   <div class="box">
-                    <h4>트래블러스 체크카드</h4>
+                    <h4><span>10.</span> 트래블러스 체크카드</h4>
                     <p class="text">해외 이용 수수료면제, 철도 5,000원 할인, 전국 맛집 5,000원 할인</p>
                     <div class="tag">
                       <span>#KB국민카드</span>
