--- a/main.html
+++ b/main.html
@@ -341,7 +341,7 @@
                 <li><a href="#">
                   <div class="photo"><img src="img/credit/credit-07.png" alt=""></div>
                   <div class="box">
-                    <h4><span>7.</span> 카드의정석 EVERY MILE SKYPASS</h4>
+                    <h4><span>7.</span> EVERY MILE SKYPASS</h4>
                     <p class="text">해외 이용 수수료 0.3% 면제, 국내 공항라운지 동반 1인 동시 이용</p>
                     <div class="tag">
                       <span>#우리카드</span>
